# QFNU-Auto-XSPJ

./: .gitignore  README.md  build_exe.bat  main.py  pyproject.toml  requirements.txt
core/: login.py  toSavepj03wjpj.py  xspj_edit.py  xspj_find.py  xspj_list.py  xspj_save.py
utils/: captcha_ocr.py  logger.py  session_manager.py
