[project]
name = "qfnu-auto-xspj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "colorlog>=6.10.1",
    "ddddocr>=1.5.6",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
